--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="offer-section">
-            <h2 id="what-we-offer">What We Offer</h2>
+            <h2 class="title-offer" id="what-we-offer">What We Offer</h2>
 
             <div class="content">
                 <div class="info">
