Finish up last sections

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
         <div class="mail-list-section">
             <div class="card">
                 <div class="mail-list-content">
-                    <p>Join Our Mail List To Stay Informed</p>
-                    <p>Sign up for our mail list to recieve updates about MyHoop's release</p>
+                    <p class="join-mail">Join Our Mail List To Stay Informed</p>
+                    <p class="mail-content">Sign up for our mail list to recieve updates about MyHoop's release</p>
                 </div>
     
-                <button class="Sign up"></button>
+                <button class="sign-up">Sign Up</button>
             </div>
         </div>
 
